sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/VCC_Vdif_Test_Patients__mdt.object-meta.xml
<CustomObject>
    <label>VCC Vdif Test Patients</label>
    <pluralLabel>Vdif Test Patients</pluralLabel>
</CustomObject>