sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>VCC_Diagnosis_Codes__c</fullName>
    <label>Diagnosis Codes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>