sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_ICN__c.field-meta.xml
<CustomField>
    <fullName>VCC_ICN__c</fullName>
    <label>ICN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>