sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_Note_Title_IEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Note_Title_IEN__c</fullName>
    <label>Note Title IEN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>