sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Org_Type__c</fullName>
    <label>Org Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>