sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site_Code__c</fullName>
    <label>Site Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>