sfdx-source/main/default/objects/VCC_Vdif_Test_Patients__mdt/fields/VCC_Visit_Related_Tos__c.field-meta.xml
<CustomField>
    <fullName>VCC_Visit_Related_Tos__c</fullName>
    <label>Visit Related Tos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>